# panda_dual_arm_control_vrep

./: .gitignore  CMakeLists.txt  README.md
include/: controller.h  linux_terminal_tool.h  panda_rbdl_model.h  panda_robot_state.h  vrep_bridge.h
src/: .controller.cpp.swp  controller.cpp  main.cpp  panda_rbdl_model.cpp  vrep_bridge.cpp
